Changes in Shorewall 4.4.16 RC 1

1)  Complete parameterized actions.

2)  Fix issue in expand_rule().

3)  Eliminate Actions module.

Changes in Shorewall 4.4.16 Beta 7

1)  Parameterized actions.

Changes in Shorewall 4.4.16 Beta 6

1)  Don't let root match wildcard.

2)  Fix use of wildcard names in the notrack file.

3)  Fix use of wildcard names in the proxyarp file

4)  Prevent perl runtime warnings with cached interface entries.

Changes in Shorewall 4.4.16 Beta 5

1)  Fix broken logical naming with Proxy ARP.

2)  Add support for proxyndp.

3)  Move mid-level rule processing to the Actions module.

4)  Implement format-2 actions.

5)  Allow DNAT and REDIRECT in actions.

6)  Remove kludgy restrictions regarding Macros and Actions.

Changes in Shorewall 4.4.16 Beta 4

1)  Only issue get_params() warnings under 'trace'

2)  Add ppp support to Shorewall-init

Changes in Shorewall 4.4.16 Beta 3

1)  Integrate bug catcher into 'trace' and correct handling of
    getparams on old (RHEL 5) shells.

Changes in Shorewall 4.4.16 Beta 2

1)  Install bug catcher.

Changes in Shorewall 4.4.16 Beta 1

1)  Handle multi-line ENV values

2)  Fix for absent params file.

Changes in Shorewall 4.4.15

1)  Add macros from Tuomo Soini.

2)  Corrected macro.JAP.

3)  Added fatal_error() functions to the -lite CLIs.

RC 1

1)  Another Perl 5.12 warning.

2)  Avoid anomalous behavior regarding syn flood chains.

3)  Add HEADERS column for IPv6

Beta 2

1)  Tweaks to IPv6 tcfilters

2)  Add support for explicit provider routes

3)  Fix shared TC tcfilters handling.

Beta 1

1)  Handle exported VERBOSE.

2)  Modernize handling of the params file.

3)  Fix NULL_ROUTE_RFC1918

4)  Fix problem of appending incorrect files.

5)  Implement shared TC.

Changes in Shorewall 4.4.14

1)  Support ipset lists.

2)  Use conntrack in 'shorewall connections'

3)  Clean up Shorewall6 error messages when running on a kernel <
    2.6.24
