@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.16 RC 1
 
 3)  Eliminate Actions module.
 
+4)  Eliminate process_actions3().
+
 Changes in Shorewall 4.4.16 Beta 7
 
 1)  Parameterized actions.
